# modelpointer

./: .gitignore  Cargo.toml  LICENSE  README.md  rust-toolchain.toml
.github/workflows/: ci.yml
core/: Cargo.toml  build.rs
core/src/: app_context.rs  config.rs  error.rs  header_utils.rs  lib.rs  model.rs  observability.rs  rate_limit.rs  upstream.rs  version.rs
core/src/observability/: logging.rs  metrics.rs  otel_trace.rs
core/src/storage/: api_key.rs  db.rs  mod.rs  model_route_store.rs
core/src/upstream/: circuit_breaker.rs  node.rs  registry.rs  retry.rs  routing.rs
docker/: .dockerignore  Dockerfile
examples/: auth.example.yaml  quota.example.yaml  routes.example.yaml
server/: Cargo.toml
server/src/: auth.rs  auth_config.rs  env_expand.rs  file_config.rs  key_cmd.rs  lib.rs  log_sink.rs  main.rs  middleware.rs  quota_config.rs  rate_limit_memory.rs  rate_limit_redis.rs  router.rs  server.rs
server/src/db/: access_log_store.rs  config_version.rs  mod.rs  quota_store.rs  route_store.rs
server/tests/: rate_limit_gateway.rs  redis_rate_limit.rs  sse_streaming.rs
