[package]
name = "modelpointer-core"
version = "0.2.0"
edition = "2024"

[lib]
name = "modelpointer_core"
crate-type = ["rlib"]

[dependencies]
rand = "0.9.2"
reqwest = { version = "0.12.8", features = ["stream", "blocking", "json", "rustls-tls"], default-features = false }
tokio = { version = "1.42.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "chrono"] }
tracing-log = "0.2"
tracing-appender = "0.2.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", default-features = false, features = [
    "std",
    "preserve_order",
] }
opentelemetry = "0.27"
opentelemetry_sdk = { version = "0.27", features = ["trace", "rt-tokio"] }
opentelemetry-otlp = { version = "0.27", features = ["trace", "http-proto", "reqwest-client"] }
tracing-opentelemetry = "0.28"
axum = { version = "0.8.6", features = ["macros", "ws", "tracing"] }
axum-server = { version = "0.8.0", default-features = false, features = ["tls-rustls"] }
anyhow = "1.0"
dashmap = "6.1.0"
metrics = "0.24.2"
metrics-exporter-prometheus = "0.17.0"
once_cell = "1.21.3"
async-trait = "0.1"
openai-protocol = { version = "=1.7.0", features = ["axum"] }
tokio-stream = { version = "0.1", features = ["sync"] }
bytes = "1.8.0"
http-body = "1.0"
bitflags = "2.10.0"
thiserror = "2.0.12"
futures-util = "0.3"
blake3 = "1.5"
arc-swap = "1.7"
subtle = "2.6"
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
tower = { version = "0.5", features = ["full"] }
tower-http = { version = "0.6", features = ["trace", "compression-gzip", "cors", "timeout", "limit", "request-id", "util", "fs"] }
sha2 = "0.10"
chrono = { version = "0.4", features = ["clock", "serde"] }
hostname = "0.4.2"

[build-dependencies]
chrono = { version = "0.4", features = ["clock"] }
toml = "0.9"
