[package]
name = "modelpointer"
version = "0.2.4"
edition = "2024"

[[bin]]
name = "modelpointer"
path = "src/main.rs"

[dependencies]
modelpointer-core = { path = "../core" }
tokio = { version = "1.42.0", features = ["full"] }
axum = { version = "0.8.6", features = ["macros", "ws", "tracing"] }
axum-server = { version = "0.8.0", default-features = false, features = ["tls-rustls"] }
tower = { version = "0.5", features = ["full"] }
tower-http = { version = "0.6", features = ["trace", "compression-gzip", "cors", "timeout", "limit", "request-id", "util", "fs"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
tracing = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
clap = { version = "4", features = ["derive", "env"] }
anyhow = "1.0"
rand = "0.9.2"
uuid = { version = "1", features = ["v4"] }
sha2 = "0.10"
openai-protocol = { version = "=1.7.0", features = ["axum"] }
async-trait = "0.1"
futures-util = "0.3"
tokio-stream = { version = "0.1", features = ["net"] }
reqwest = { version = "0.12.8", features = ["stream", "json", "rustls-tls"], default-features = false }
bytes = "1.8.0"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "any", "sqlite", "postgres", "mysql", "chrono"] }
arc-swap = "1.7"
dashmap = "6.1.0"
serde_yaml = "0.9"
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"] }
chrono = { version = "0.4", features = ["clock"] }
